// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Monkey Patching React
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm going to show you some totally not hacks at all, believe me, I promise, really not hacks... awesome monkey patching of React.
                  </p>
                  <h2>
                    Want more awesome stuff?
                  </h2>
                  <p>
                    Here's some links you might enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - github.com/JakeSidSmith/react-monkey-patching
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jakesidsmith.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GitHub"
                      >
                        My GitHub - github.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Twitter"
                      >
                        My Twitter - twitter.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Highlight Updates"
                      >
                        React Highlight Updates (we'll cover this shortly) - npmjs.com/package/react-highlight-updates
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fastclick"
                      >
                        React Fastclick (we'll cover this briefly also) - npmjs.com/package/react-fastclick
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when llamified 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                Llama llama llama llama?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Llama Llama?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                Llama llama
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Llama LLAMA llama llama
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Llama
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Llama Llama Llama
                  </h2>
                  <p>
                    Llama! Llama llama llama Llama, llama llama LLAMA'llama llama llama llama llama llama llama llama llama llama llama, llama llama, LLAMA llama, llama llama llama... llama llama llama llama Llama.
                  </p>
                  <h2>
                    Llama llama llama llama?
                  </h2>
                  <p>
                    Llama'llama llama llama llama llama llama:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="Llama llama"
                      >
                        Llama llama - llama.llama/Llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Llama Llama Llama"
                      >
                        Llama Llama Llama (llama'llama llama llama llama) - llama.llama/llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama (llama'llama llama llama llama llama) - llama.llama/llama/llama-llama
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when scrambled 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Inrto
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                Waht is mkoney pnithcag?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why Recat?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Recat hghigilht updetas
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React ftscclaik
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Mtriaael UI botutn ecefft
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Sipmle patch fciotnun
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Limlafy
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Sbcalmre
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Iineztottnalaroaiinn
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Irnto
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Menoky Phatnicg Raect
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm giong to show you some tltoaly not hkacs at all, belveie me, I pmriose, rellay not hacks... aeowmse mkenoy pthinacg of React.
                  </p>
                  <h2>
                    Want more awsomee sutff?
                  </h2>
                  <p>
                    Hree's some lkins you mhigt ejnoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This dmeo"
                      >
                        This dmeo - gituhb.com/JiSdkamiSeth/recat-meknoy-ptchinag
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Bolg"
                      >
                        My Bolg - jaksitmedish.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GHutib"
                      >
                        My GitHub - giuhtb.com/jdesskmtiaih
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Ttwietr"
                      >
                        My Ttweitr - twtiter.com/jmaidsketish
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Racet Hggilhhit Uaetdps"
                      >
                        React Hhgilihgt Uaepdts (we'll coevr tihs srtlhoy) - nmpjs.com/pgaacke/racet-hihlhiggt-utdepas
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Racet Fatcclsik"
                      >
                        React Flacstick (we'll coevr this berlfiy aslo) - nmjps.com/packgae/react-fisatcclk
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
